--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,17 @@
     "axios": "^1.6.0",
     "@vueuse/core": "^10.5.0",
     "chart.js": "^4.4.0",
-    "vue-chartjs": "^5.2.0"
+    "vue-chartjs": "^5.2.0",
+    "three": "^0.158.0",
+    "@tensorflow/tfjs": "^4.13.0",
+    "socket.io-client": "^4.7.4",
+    "d3": "^7.8.5",
+    "monaco-editor": "^0.44.0",
+    "xterm": "^5.3.0",
+    "marked": "^9.1.6",
+    "highlight.js": "^11.9.0",
+    "crypto-js": "^4.2.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
